# TrackG4

./: .gitignore  CMakeLists.txt  Doxyfile  G4batch.sh  G4main.cc  README.md  build.sh  index.html  main.cpp  requirements.txt  trackfit.cc
.github/workflows/: Tests.yml  docs.yml
Geant4/: CMakeLists.txt  G4main.cc  build.sh  run.mac  vis.mac
Geant4/analysis/: analysis.ipynb
Geant4/include/: Action.hh  DataManager.hh  Detector.hh  DetectorGeometry.hh  DetectorParameters.hh  EventAction.hh  EventData.hh  Generator.hh  Geometry.hh  Materials.hh  Physics.hh  RunAction.hh  SensitiveDetector.hh  UserParameters.hh
Geant4/src/: Action.cc  DataManager.cc  Detector.cc  DetectorGeometry.cc  EventAction.cc  Generator.cc  Geometry.cc  Physics.cc  RunAction.cc  SensitiveDetector.cc
analysis/: analysis.ipynb  output.root
data/: fit_results.root  output.root
data/Event_Dict/: AutoDict_Event_2947179584.cxx  AutoDict_Event_2947179584_cxx.d  AutoDict_Event_2947179584_cxx_ACLiC_dict_rdict.pcm
docs/: Doxyfile  index.html
docs/html/: _action_8cc.html  _action_8cc_8o_8d.html  _action_8cc_8o_8d_source.html  _action_8cc_source.html  _action_8hh.html  _action_8hh_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _data_manager_8cc.html  _data_manager_8cc_source.html  _data_manager_8hh.html  _data_manager_8hh_source.html  _data_manager_m_t_8cc.html  _data_manager_m_t_8cc_source.html  _data_manager_m_t_8hh.html  _data_manager_m_t_8hh_source.html  _data_manager_m_t_test_8cpp.html  _data_manager_m_t_test_8cpp_source.html  _data_manager_test_8cpp.html  _data_manager_test_8cpp_source.html  _detector_8cc.html  _detector_8cc_source.html  _detector_8hh.html  _detector_8hh_source.html  _detector_geometry_8cc.html  _detector_geometry_8cc_source.html  _detector_geometry_8hh.html  _detector_geometry_8hh_source.html  _detector_parameters_8hh.html  _detector_parameters_8hh_source.html  _event_action_8cc.html  _event_action_8cc_source.html  _event_action_8hh.html  _event_action_8hh_source.html  _event_data_8cc.html  _event_data_8cc_source.html  _event_data_8hh.html  _event_data_8hh_source.html  (+518 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_9.js  classes_a.js  defines_7.js  defines_9.js  defines_b.js  enumvalues_3.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_0.js  (+39 more)
docs/latex/: _generator_8hh_source.tex  _materials_8hh_source.tex  annotated.tex  class_my_primary_generator.eps  class_my_primary_generator.tex  files.tex  hierarchy.tex  refman.tex  struct_my_materials.tex
html/: _action_8cc.html  _action_8cc_source.html  _action_8hh.html  _action_8hh_source.html  _data_manager_8cc.html  _data_manager_8cc_source.html  _data_manager_8hh.html  _data_manager_8hh_source.html  _data_manager_m_t_8cc.html  _data_manager_m_t_8cc_source.html  _data_manager_m_t_8hh.html  _data_manager_m_t_8hh_source.html  _data_manager_m_t_test_8cpp.html  _data_manager_m_t_test_8cpp_source.html  _data_manager_test_8cpp.html  _data_manager_test_8cpp_source.html  _detector_geometry_8cc.html  _detector_geometry_8cc_source.html  _detector_geometry_8hh.html  _detector_geometry_8hh_source.html  _event_action_8cc.html  _event_action_8cc_source.html  _event_action_8hh.html  _event_action_8hh_source.html  _event_data_8cc.html  _event_data_8cc_source.html  _event_data_8hh.html  _event_data_8hh_source.html  _fit_8hh.html  _fit_8hh_source.html  _fit_test_8cpp.html  _fit_test_8cpp_source.html  _formulas.tex  _g4main_8cc.html  _g4main_8cc_source.html  _generator_8cc.html  _generator_8cc_source.html  _generator_8hh.html  _generator_8hh_source.html  _physics_8cc.html  (+87 more)
html/search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  files_1.js  files_4.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_9.js  namespaces_6.js  related_0.js  searchdata.js  variables_1.js  variables_10.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js  variables_8.js  variables_9.js  (+3 more)
include/: Action.hh  DataManager.hh  DataManagerMT.hh  DetectorGeometry.hh  EventAction.hh  EventData.hh  Fit.hh  Generator.hh  Physics.hh  ReadOut.hh  RunAction.hh  SensitiveDetector.hh  UserParameters.hh
report/latex_presentation/: demo.bib  demo.tex
report/latex_report/: example.bib  main.tex  structure.tex
src/: Action.cc  DataManager.cc  DataManagerMT.cc  DetectorGeometry.cc  EventAction.cc  EventData.cc  Generator.cc  Physics.cc  ReadOut.cc  ReadOut.cpp  RunAction.cc  SensitiveDetector.cc
test/DataManager/: DataManagerTest.cpp
test/DataManagerMT/: DataManagerMTTest.cpp
test/Fit/: FitTest.cpp
test/ReadOut/: ReadOutTest.cpp
